fixed register popups alignment, fixed overlapping of top deal found

--- a/src/personal-finance/shared/offers/offers-list/offers-list.component.less
+++ b/src/personal-finance/shared/offers/offers-list/offers-list.component.less
@@ -128,7 +128,7 @@
     ul.credit-cards-list {
         & > li {
             border: 1px solid #666;
-            padding: 35px 40px;
+            padding: 50px 40px 30px;
             display: flex;
             align-items: center;
             position: relative;
